<?xml version="1.0" encoding="utf-8"?>
<shortcuts xmlns:android="http://schemas.android.com/apk/res/android">
    <shortcut
        android:icon="@drawable/ic_qu_shadowsocks_launcher"
        android:shortcutId="toggle"
        android:shortcutLongLabel="@string/quick_toggle"
        android:shortcutShortLabel="@string/quick_toggle">
        <intent
            android:action="android.intent.action.MAIN"
            android:targetClass="io.nekohasekai.sagernet.QuickToggleShortcut" />
    </shortcut>
    <shortcut
        android:icon="@drawable/ic_qu_shadowsocks_launcher"
        android:shortcutId="enable"
        android:shortcutLongLabel="@string/quick_enable"
        android:shortcutShortLabel="@string/quick_enable">
        <intent
            android:action="android.intent.action.MAIN"
            android:targetClass="io.nekohasekai.sagernet.ui.QuickEnableShortcut" />
    </shortcut>
    <shortcut
        android:icon="@drawable/ic_qu_shadowsocks_launcher"
        android:shortcutId="disable"
        android:shortcutLongLabel="@string/quick_disable"
        android:shortcutShortLabel="@string/quick_disable">
        <intent
            android:action="android.intent.action.MAIN"
            android:targetClass="io.nekohasekai.sagernet.ui.QuickDisableShortcut" />
    </shortcut>
    <shortcut
        android:icon="@drawable/ic_qu_shadowsocks_launcher"
        android:shortcutId="clear-cache-restart"
        android:shortcutLongLabel="@string/quick_clear_cache_restart"
        android:shortcutShortLabel="@string/quick_clear_cache_restart">
        <intent
            android:action="android.intent.action.MAIN"
            android:targetClass="io.nekohasekai.sagernet.ui.QuickClearCacheShortcut" />
    </shortcut>
    <shortcut
        android:icon="@drawable/ic_qu_camera_launcher"
        android:shortcutId="scan"
        android:shortcutLongLabel="@string/add_profile_methods_scan_qr_code"
        android:shortcutShortLabel="@string/add_profile_methods_scan_qr_code">
        <intent
            android:action="android.intent.action.MAIN"
            android:targetClass="io.nekohasekai.sagernet.ui.ScannerActivity" />
    </shortcut>
</shortcuts>
