<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    android:padding="16dp">

    <com.google.android.material.checkbox.MaterialCheckBox
        android:id="@+id/backup_configurations"
        android:layout_width="wrap_content"
        android:layout_height="48dp"
        android:checked="true"
        android:text="@string/backup_groups_and_configurations"
        android:textAppearance="@style/TextAppearance.Material3.BodyLarge" />

    <com.google.android.material.checkbox.MaterialCheckBox
        android:id="@+id/backup_rules"
        android:layout_width="wrap_content"
        android:layout_height="48dp"
        android:checked="true"
        android:text="@string/backup_rules"
        android:textAppearance="@style/TextAppearance.Material3.BodyLarge" />

    <com.google.android.material.checkbox.MaterialCheckBox
        android:id="@+id/backup_settings"
        android:layout_width="wrap_content"
        android:layout_height="48dp"
        android:checked="true"
        android:text="@string/backup_settings"
        android:textAppearance="@style/TextAppearance.Material3.BodyLarge" />

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="8dp"
        android:textAppearance="@style/TextAppearance.Material3.BodyMedium"
        android:textColor="?attr/colorError"
        android:text="@string/backup_import_summary">

    </TextView>

</LinearLayout>
